[package]
name = "pinball-defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable optimizations for deps always
[profile.dev.package."*"]
opt-level = 3

# setting the number codegen units to 1 will further improve performances in a noticeable way, 
# even for a release build (though the build itself will take longer to complete)
#[profile.release]
#codegen-units = 1

[features]
log = []

[dependencies]
bevy = { version ="0.15.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.28.0"
bevy_asset_loader = "0.22.0"
avian2d = { version = "0.2.0" }
bevy_window_title_diagnostics = "0.15.0"
bevy_tweening = "0.12.0"
digits_iterator = "0.1.0"
bevy_framepace = "0.18.0"
rand = "0.8.5"
#bevy_debug_grid = "0.1"
